me_messages: Correct line-height and bottom spacing.

--- a/web/styles/message_row.css
+++ b/web/styles/message_row.css
@@ -319,6 +319,10 @@
                     /* Set the same line-height as on message content for
                        me-messages. */
                     line-height: var(--message-box-line-height);
+                    /* Ensure the same spacing below messages as for any other
+                       paragraph.
+                       TODO: Coordinate this with other info-density variables. */
+                    padding-bottom: 5px;
 
                     /* Display message components inline, with wrapping white-space,
                        so the sender name and message display as a continuous line
@@ -388,6 +392,10 @@
                 text-overflow: ellipsis;
                 grid-area: sender;
                 display: flex;
+                /* A generous line-height on the sender name is necessary
+                   for internationalization and non-Western Latin character
+                   sets. */
+                line-height: var(--message-box-sender-line-height);
                 /* Ensure flexed sender info (name, status emoji, inline EDITED)
                    forms a baseline group, which will participate with the
                    message-box grid's baseline group, too. */
@@ -402,10 +410,6 @@
                     overflow: hidden;
                     text-overflow: ellipsis;
                     white-space: nowrap;
-                    /* A generous line-height on the sender name is necessary
-                       for internationalization and non-Western Latin character
-                       sets. */
-                    line-height: var(--message-box-sender-line-height);
                     outline: none;
                     align-self: baseline;
                 }
